# project-workmen

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE-APACHE  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs  project.rs  system.rs
apps/desktop/src-tauri/tests/: project_integration.rs
apps/desktop/src/features/project/: OpenProject.test.tsx  OpenProject.tsx  ProjectHeader.tsx  ScanProgress.tsx  project-store.test.ts  project-store.ts
apps/desktop/src/lib/: backend.ts
crates/workmen-cli/: Cargo.toml
crates/workmen-cli/src/: main.rs
crates/workmen-cli/tests/: help.rs  init.rs
crates/workmen-core/: Cargo.toml
crates/workmen-core/examples/: regen_schemas.rs
crates/workmen-core/src/: bindings.rs  error.rs  lib.rs  schema.rs
crates/workmen-core/src/classify/: draft.rs  families.rs  mod.rs  roles.rs
crates/workmen-core/src/model/: asset.rs  mod.rs  operation.rs  profile.rs  validation.rs
crates/workmen-core/src/profile/: lifecycle.rs  matcher.rs  mod.rs  resolver.rs
crates/workmen-core/src/project/: config.rs  init.rs  migrate.rs  mod.rs  root.rs
crates/workmen-core/src/report/: json.rs  mod.rs  text.rs
crates/workmen-core/src/scan/: cache.rs  formats.rs  metadata.rs  mod.rs  walker.rs
crates/workmen-core/src/validate/: diff.rs  mod.rs  rules.rs
crates/workmen-core/tests/: classification.rs  contracts.rs  profile_resolution.rs  project_contract.rs  reports.rs  scanner.rs  spec_diff.rs  typed_contracts.rs
docs/adr/: 0001-standalone-project-local-contracts.md  0002-tauri-rust-shared-core.md  0003-tauri-0-35-3-macos-sequoia-panic.md
docs/superpowers/plans/: 2026-07-13-workmen-core-validation.md  2026-07-13-workmen-desktop-workbench.md  2026-07-13-workmen-sprite-atlas-pipeline.md  README.md
docs/superpowers/specs/: 2026-07-13-workmen-design.md
patches/tao-0.35.3/: README.md
patches/tao-0.35.3/src/platform_impl/macos/: app_state.rs
schemas/: workmen-profile.schema.json
scripts/: create-issues.py
