[workspace]
resolver = "2"
members = [
    "crates/workmen-core",
    "crates/workmen-cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MikHaiLz404/project-workmen"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"

# Errors
thiserror = "2"

# Filesystem walking / pattern matching
ignore = "0.4"
globset = "0.4"

# Image inspection
image = "0.25"

# Hashing
blake3 = "1"

# Observability
tracing = "0.1"
tracing-appender = "0.2"

# Platform paths
directories = "5"

# Concurrency
rayon = "1"

# Test utilities
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }

# Tauri 2 desktop host
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
# Local tao 0.35.3 with macOS Sequoia panic mitigation.
# See patches/tao-0.35.3/README.md for context. This redirect is a
# path override; it does not change the crate version (still 0.35.3),
# so any feature set or dependency surface requested by tauri / wry
# continues to resolve against this patched source.
[patch.crates-io]
tao = { path = "patches/tao-0.35.3" }
