[package]
name = "workmen-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workmen command-line interface: scan / validate / init a game project."

[[bin]]
name = "workmen"
path = "src/main.rs"

[dependencies]
workmen-core = { path = "../workmen-core" }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }