[package]
name = "workmen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Core library for the Workmen game-asset workbench: domain models, error type, shared traits."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
directories = { workspace = true }
ignore = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
